--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,5 +20,6 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "matplotlib (>=3.10.7,<4.0.0)"
+    "matplotlib (>=3.10.7,<4.0.0)",
+    "numba (>=0.62.1,<0.63.0)"
 ]
