--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "un simulateur modulaire du trafic routier"
 authors = [
     {name = "Your Name",email = "amaidiamaidi@gmail.com"}
 ]
+packages = [{ include = "simulateur_trafic" }]
 license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.12,<3.13"
