--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "simulateur_trafic"
+name = "simulateur-trafic-package"
 version = "2.0"
 description = "un simulateur modulaire du trafic routier"
 authors = [
