--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,13 +17,16 @@ jobs:
       with:
         python-version: 3.12
 
-    - name: Install Poetry
-      run: pip install poetry
+    - name: Install dependencies
+      run: |
+        pip install poetry
+        pip install twine
 
     - name: Build package
       run: poetry build
 
-    - name: Publish to PyPI
+    - name: Publish to PyPI with Twine
       env:
-        PYPI_API_TOKEN: ${{ secrets.PYPI_TOKEN }}
-      run: poetry publish --username __token__ --password $PYPI_API_TOKEN
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+      run: twine upload dist/*
