--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,11 @@ name = "simulateur-trafic-package"
 version = "2.0"
 description = "un simulateur modulaire du trafic routier"
 authors = [
-    {name = "Your Name",email = "amaidiamaidi@gmail.com"}
+    {name = "Your Name", email = "amaidiamaidi@gmail.com"}
 ]
 packages = [
-    { include = "simulateur_trafic", from = "." }
+    { include = "simulateur_trafic" }
 ]
-
 license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.12,<3.13"
@@ -16,7 +15,6 @@ dependencies = [
     "pytest (>=9.0.1,<10.0.0)",
     "pytest-cov (>=7.0.0,<8.0.0)"
 ]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
