--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
+          
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip setuptools wheel twine
 
       # 3. Installer les dépendances pour build et publication
       - name: Install build and twine
